--- a/src/styles.styl
+++ b/src/styles.styl
@@ -31,7 +31,7 @@ body
   display flex
   align-items center
   justify-content center
-  position fixed
+  //position fixed
   width 100%
   height 22px
   background-color #222
@@ -40,7 +40,7 @@ body
 .appNaviBar
   display flex
   align-items center
-  position fixed
+  //position fixed
   top 22px
   left 0px
   width 100%
@@ -51,4 +51,3 @@ body
   display block
   position absolute
   top 22px + 44px
-
