Move Login and Connect to LeftDrawer

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -47,7 +47,18 @@ body
   height 44px
   box-shadow rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px
 
+.appLeftDrawer-header
+  display flex
+  align-items center
+  background-color #222
+  color white
+
+.appLeftDrawer-body
+  height 100%
+  padding 0.5rem
+
 .appBody
   display block
   position absolute
   top 22px + 44px
+  padding 0.5rem
