--- a/src/styles.styl
+++ b/src/styles.styl
@@ -16,6 +16,9 @@ body
   margin 0
   padding 0
 
+my-box-shadow()
+  box-shadow rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px
+
 .app
   //color rgba(0, 0, 0, 0.77)
 
@@ -38,20 +41,16 @@ body
   color white
 
 .appNaviBar
-  display flex
-  align-items center
-  //position fixed
-  top 22px
-  left 0px
   width 100%
-  height 44px
-  box-shadow rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px
+  min-height 44px
+  my-box-shadow()
 
 .appLeftDrawer-header
   display flex
   align-items center
   background-color #222
   color white
+  min-height 44px
 
 .appLeftDrawer-body
   height 100%
@@ -62,3 +61,33 @@ body
   position absolute
   top 22px + 44px
   padding 0.5rem
+
+.appNotif
+  display block
+  position fixed
+  left 0
+  bottom 0
+  //min-height 44px*2
+  z-index 2000
+
+.appNotif-container
+  margin 0 0.5rem 0.5rem 0.5rem
+  width 320px - 16px*2
+  padding 0.5rem
+
+  border-radius 3px
+  color #ef4123
+  //border #222 solid 1px
+  //background-color white
+  border #ffd2d2 solid 1px
+  background-color #ffd2d2 // #ffebeb
+  opacity 0.88
+  my-box-shadow()
+
+//
+.section
+  display flex
+  align-items center
+
+.section-text
+  margin-left 0.5rem
