--- a/src/styles.styl
+++ b/src/styles.styl
@@ -57,9 +57,14 @@ my-box-shadow()
 
 .appBody
   display block
-  position absolute
-  top 22px + 44px
   padding 0.5rem
+
+.appFooter
+  display flex
+  justify-content center
+  align-items center
+  color #aaa
+  height 44px
 
 .appNotif
   display block
