Enable filtering by username

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -4,8 +4,8 @@
 html
   -webkit-app-region: drag
   //-webkit-user-select: none
-  height: 100%
-  width: 100%
+  height 100%
+  width 100%
   // Roboto is material-ui default
   //background-color rgba(255, 255, 255, 0.88)
   font-family Roboto, sans-serif
@@ -18,9 +18,6 @@ body
 
 my-box-shadow()
   box-shadow rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px
-
-.app
-  //color rgba(0, 0, 0, 0.77)
 
 .members-memberItem
   margin-bottom 2px
