Show notification messages like join, invited, etc

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -68,7 +68,6 @@ my-box-shadow()
   position fixed
   left 0
   bottom 0
-  //min-height 44px*2
   z-index 2000
 
 .appNotif-container
@@ -77,13 +76,18 @@ my-box-shadow()
   padding 0.5rem
 
   border-radius 3px
-  color #ef4123
-  //border #222 solid 1px
-  //background-color white
-  border #ffd2d2 solid 1px
-  background-color #ffd2d2 // #ffebeb
   opacity 0.88
   my-box-shadow()
+
+.appNotif-container_notif
+  color #4123ef
+  border #d2d2ff solid 1px
+  background-color #d2d2ff
+
+.appNotif-container_warn
+  color #ef4123
+  border #ffd2d2 solid 1px
+  background-color #ffd2d2
 
 //
 .section
